Got same machine postgresworking.

--- a/dev.env
+++ b/dev.env
@@ -1,2 +1,8 @@
-ALLOWED_HOSTS = 127.0.0.1,192.168.2.214
-DEBUG = true
+ALLOWED_HOSTS=127.0.0.1,192.168.2.214
+DEBUG=true
+DJANGO_DB_MODE=devprod
+DJANGO_DB_PASSWORD=ByweilmJR2PmMZ6fUqXJ
+DJANGO_DB_USER=Recimindor
+DJANGO_DB=recimindertest
+DJANGO_DB_HOST=127.0.0.1
+DJANGO_DB_PORT=5432
