--- a/dev.env
+++ b/dev.env
@@ -1,7 +1,8 @@
 ALLOWED_HOSTS=127.0.0.1,192.168.2.214
 DEBUG=true
+DJANGO_EMAIL_MODE=dev
 DJANGO_DB_MODE=dev
-DJANGO_DB_PASSWORD=ByweilmJR2PmMZ6fUqXJ
+DJANGO_DB_PASSWORD=PASSWORD
 DJANGO_DB_USER=Recimindor
 DJANGO_DB=recimindertest
 DJANGO_DB_HOST=192.168.2.214
