--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pluggy==1.5.0
 psycopg==3.2.3
 psycopg-binary==3.2.3
 pytest==8.3.4
+pytest-cov==6.0.0
 pytest-django==4.9.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
